product page data uploaded

--- a/about-us.html
+++ b/about-us.html
@@ -49,6 +49,54 @@
         <section class="about-hero">
             <div class="container-xxl">
                 <div class="abh-marqee">
+                    <div class="abh-marqee-text">
+                        <div class="marquee-container">
+                            <div class="marquee-content d-flex gap-5">
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                                <h1>We are <span class="red">mediax</span></h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="abh-marqee">
                     <marquee behavior="" direction="">
                         <div class="abh-marqee-text">
                             <h1>We are <span class="red">mediax</span></h1>
@@ -93,7 +141,7 @@
                             <h1>We are <span class="red">mediax</span></h1>
                         </div>
                     </marquee>
-                </div>
+                </div> -->
                 <div class="abh-img"><img src="image/about-hero.jpg" alt="" class="w-100"></div>
             </div>
         </section>
@@ -111,7 +159,9 @@
                         </div>
                         <div class="col-md-8">
                             <p>
-                                MediaX is a lively bunch of advertising pros, always up-to-date with the latest trends. We're skilled at creating effective strategies that get results. Working with companies worldwide, we develop unique plans to help businesses grow.
+                                MediaX is a lively bunch of advertising pros, always up-to-date with the latest trends.
+                                We're skilled at creating effective strategies that get results. Working with companies
+                                worldwide, we develop unique plans to help businesses grow.
                             </p>
                         </div>
                     </div>
@@ -171,7 +221,7 @@
                                     </div>
                                 </div>
                             </div>
-                            
+
                             <div class="col-xl-2 col-md-3 col-sm-4 col-6 my-2 my-sm-4">
                                 <div class="te-box">
                                     <div class="te-img"><img src="image/team/Ritika.jpeg" alt="" class="w-100"></div>
@@ -327,7 +377,32 @@
             <div class="container-xxl text-center">
                 <h2>Partnerships We’ve Built</h2>
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 col-sm-10"><img src="image/partnerships.png" alt="" class="w-100"></div>
+                    <div class="col-6 col-md-3 col-xl-2">
+                        <div class="par-img">
+                            <img src="image/partners-logo/partner-1.png" alt="" class="w-100">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 col-xl-2">
+                        <div class="par-img">
+                            <img src="image/partners-logo/partner-2.png" alt="" class="w-100">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 col-xl-2">
+                        <div class="par-img">
+                            <img src="image/partners-logo/partner-3.png" alt="" class="w-100">
+                        </div>
+                    </div>
+                    <div class="d-none d-md-block"></div>
+                    <div class="col-6 col-md-3 col-xl-2">
+                        <div class="par-img">
+                            <img src="image/partners-logo/partner-4.png" alt="" class="w-100">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 col-xl-2">
+                        <div class="par-img">
+                            <img src="image/partners-logo/partner-5.png" alt="" class="w-100">
+                        </div>
+                    </div>
                 </div>
                 <!-- <div class="partner-slider">
                     <div class="par-box">
@@ -412,11 +487,12 @@
         <section class="our-belifes">
             <div class="container-xxl">
                 <div class="row justify-content-between ">
-                    <div class="col-lg-6">
+                    <div class="col-xl-6 col-xxl-5">
                         <div class="oub-left h-100 d-flex  flex-column  justify-content-between ">
                             <div class="">
                                 <h2>Our Beliefs</h2>
-                                <p> If our clients are happy, then so are we. We put our hearts into collectively creating pivotal pathways for your brand to be seen and heard by the crowd. </p>
+                                <p> If our clients are happy, then so are we. We put our hearts into collectively
+                                    creating pivotal pathways for your brand to be seen and heard by the crowd. </p>
                             </div>
                             <div class="">
                                 <a href="#" class="th-arrow-btn">
@@ -426,35 +502,39 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-xl-5 p-0 p-sm-2">
+                    <div class="col-xl-6 p-0 p-sm-2">
                         <div class="oub-right">
                             <div class="row">
                                 <div class="col-sm-6 mt-4 mb-sm-5 px-sm-3">
                                     <div class="oub-box oub-box-1">
                                         <img src="image/bel-face.png" alt="">
                                         <h5>Keep It human</h5>
-                                        <p>From design to partnerships, our commitment is to positively impact all the real lives we touch.</p>
+                                        <p>From design to partnerships, our commitment is to positively impact all the
+                                            real lives we touch.</p>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 mt-4 mb-sm-5 px-sm-3">
                                     <div class="oub-box oub-box-2">
                                         <img src="image/bel-plane.png" alt="">
                                         <h5>Push our boundaries</h5>
-                                        <p>We create safe spaces to challenge norms, asking "what if" to drive progress and build for people.</p>
+                                        <p>We create safe spaces to challenge norms, asking "what if" to drive progress
+                                            and build for people.</p>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 mt-4 mb-sm-5 px-sm-3">
                                     <div class="oub-box oub-box-3">
                                         <img src="image/bel-chat.png" alt="">
                                         <h5>Uncover the stories</h5>
-                                        <p>We're passionate about uncovering the amazing tales, forging connections that resonate deeply with audiences.</p>
+                                        <p>We're passionate about uncovering the amazing tales, forging connections that
+                                            resonate deeply with audiences.</p>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 mt-4 mb-sm-5 px-sm-3">
                                     <div class="oub-box oub-box-4">
                                         <img src="image/bel-target.png" alt="">
                                         <h5> Drive Results</h5>
-                                        <p>We're all about making things happen, ensuring every move we make brings real, measurable success for our clients.</p>
+                                        <p>We're all about making things happen, ensuring every move we make brings
+                                            real, measurable success for our clients.</p>
                                     </div>
                                 </div>
                             </div>
@@ -499,49 +579,49 @@
     <script src="js/main.js"></script>
     <!-- Initialize Swiper -->
     <script>
-      var swiper = new Swiper(".mySwiper", {
-        slidesPerView: 6,
-        centeredSlides: true,
-        breakpoints: {
-          320: {  // small screens
-            slidesPerView: 3,
-          },
-          480: {  // medium screens
-            slidesPerView: 4,
-          },
-          768: {  // large screens
-            slidesPerView: 5,
-          },
-          1024: {  // extra large screens
+        var swiper = new Swiper(".mySwiper", {
             slidesPerView: 6,
-          },
-        },
-        on: {
-          slideChangeTransitionEnd: function () {
-            updateSlides();
-          }
+            centeredSlides: true,
+            breakpoints: {
+                320: {  // small screens
+                    slidesPerView: 3,
+                },
+                480: {  // medium screens
+                    slidesPerView: 4,
+                },
+                768: {  // large screens
+                    slidesPerView: 5,
+                },
+                1024: {  // extra large screens
+                    slidesPerView: 6,
+                },
+            },
+            on: {
+                slideChangeTransitionEnd: function () {
+                    updateSlides();
+                }
+            }
+        });
+
+        function updateSlides() {
+            document.querySelectorAll('.swiper-slide').forEach(function (slide) {
+                slide.classList.remove('swiper-slide-active');
+            });
+            swiper.slides[swiper.activeIndex].classList.add('swiper-slide-active');
         }
-      });
 
-      function updateSlides() {
-        document.querySelectorAll('.swiper-slide').forEach(function(slide) {
-          slide.classList.remove('swiper-slide-active');
+        // Add click event listener to each slide
+        document.querySelectorAll('.swiper-slide').forEach(function (slide, index) {
+            slide.addEventListener('click', function () {
+                swiper.slideTo(index);
+            });
         });
-        swiper.slides[swiper.activeIndex].classList.add('swiper-slide-active');
-      }
 
-      // Add click event listener to each slide
-      document.querySelectorAll('.swiper-slide').forEach(function(slide, index) {
-        slide.addEventListener('click', function() {
-          swiper.slideTo(index);
-        });
-      });
-
-      // Initial update
-      updateSlides();
+        // Initial update
+        updateSlides();
     </script>
     <script>
-       $('.swiper-slide').click(function(){
+        $('.swiper-slide').click(function () {
             $(".glimg-text p").addClass('d-none');
             $(`[data-gli-text="${$(this).attr('id')}"]`).removeClass('d-none');
         })
