--- a/careers.html
+++ b/careers.html
@@ -48,8 +48,8 @@
             <div class="crh-text">
                 <div class="container-xxl">
                     <div class="row justify-content-center text-center">
-                        <div class="col-xl-6 col-md-8 col-sm-10">
-                            <h2>We’re not just like any other agency!</h2>
+                        <div class="col-md-10">
+                            <h2>We're all about doing great work and having a blast doing it!</h2>
                             <p>Our team is dedicated to crafting innovative strategies that stand out and connect with
                                 people. Join us in shaping the future of marketing and making your mark with confidence.
                             </p>
@@ -65,43 +65,38 @@
             <div class="container-xxl">
                 <div class="row">
                     <div class="col-md-10 col-lg-8 col-xl-6 mb-4">
-                        <h2>We have Three workplace mantras</h2>
+                        <h2>Our Core Principles </h2>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-6 mt-4 col-lg-4">
+                    <div class="col-md-6 mt-4 col-lg-4">
                         <div class="work-box">
                             <div class="wb-num">01.</div>
-                            <div class="wb-title">The Beauty of Eloquence</div>
+                            <div class="wb-title">Own Your Excellence</div>
                             <div class="wb-img"><img src="image/work-1.png" alt="" class="w-100"></div>
                             <div class="wb-text">
-                                <p>We master ideas. And pictures. And words. We believe communication is a craft, and if
-                                    something is worth saying, it's worth saying well. (Because an idea without the
-                                    right words is like good intentions without action.)</p>
+                                <p>We're not interested in simply going through the motions or sticking to the familiar. Instead, we value those with the courage to think differently and the creativity to approach challenges from new angles.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 mt-4 col-lg-4">
+                    <div class="col-md-6 mt-4 col-lg-4">
                         <div class="work-box">
                             <div class="wb-num">02.</div>
-                            <div class="wb-title">Family Is Everything</div>
+                            <div class="wb-title">Set Yourselves Apart – this isn’t your typical agency</div>
                             <div class="wb-img"><img src="image/work-2.png" alt="" class="w-100"></div>
                             <div class="wb-text">
-                                <p>It starts with those closest to us and extends to our MediaX family, our clients, our
-                                    community, and the family of all living things. Family is the most important thing.
-                                    It is, indeed, everything.</p>
+                                <p>We're here for clients who dream big and aren't afraid to take risks. We love to shake things up and make a real impact. We're here to help people with big ideas who aren't afraid to try new things.</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-6 mt-4 col-lg-4">
+                    <div class="col-md-6 mt-4 col-lg-4">
                         <div class="work-box">
                             <div class="wb-num">03.</div>
-                            <div class="wb-title">From Wonder? To Wonder!</div>
+                            <div class="wb-title">Positivity is in our DNA</div>
                             <div class="wb-img"><img src="image/work-3.png" alt="" class="w-100"></div>
                             <div class="wb-text">
-                                <p>Curiosity, innocence, aliveness. Some would say these are childlike traits. We say
-                                    they are the key ingredients for mature learning and discovery, It's this magic that
-                                    changes the minds of people who can change the world.</p>
+                                <p>We work with a zero gravity approach in everything we do, that means we don’t let anything or anybody weigh us down. We believe we can and we do. Do you?
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -124,19 +119,18 @@
                     <div class="ouex-box">
                         <div class="row align-items-center">
                             <div class="col-md-5">
-                                <div class="muex-img"><img src="image/our-expert-1.jpg" alt="" class="w-100"></div>
+                                <div class="muex-img"><img src="image/team/gauravi.jpg" alt="" class="w-100"></div>
                             </div>
                             <div class="col-md-7">
                                 <div class="muex-text">
                                     <h1>“</h1>
-                                    <h3>This company is full of bright minds with even brighter personalities. The
-                                        atmosphere is contagious.</h3>
-                                    <p>I’ve seen this company outperform expectations year after year while keeping a
+                                    <h3>In my 3 years here, I've grown alongside a team that's incredibly creative and dedicated to client success. Proud to be part of MediaX Fam!</h3>
+                                    <!-- <p>I’ve seen this company outperform expectations year after year while keeping a
                                         genuine focus on the personal growth and happiness of each and every employee
-                                        under the MediaX umbrella.</p>
+                                        under the MediaX umbrella.</p> -->
 
-                                    <h5>- Sadaf Khan</h5>
-                                    <h6>(Sr. UI/UX Designer)</h6>
+                                    <h5>- Gauravi Dhingra </h5>
+                                    <h6>(Account Manager)</h6>
                                 </div>
                             </div>
                         </div>
@@ -144,19 +138,18 @@
                     <div class="ouex-box">
                         <div class="row align-items-center">
                             <div class="col-md-5">
-                                <div class="muex-img"><img src="image/our-expert-1.jpg" alt="" class="w-100"></div>
+                                <div class="muex-img"><img src="image/team/vanshika.jpeg" alt="" class="w-100"></div>
                             </div>
                             <div class="col-md-7">
                                 <div class="muex-text">
                                     <h1>“</h1>
-                                    <h3>This company is full of bright minds with even brighter personalities. The
-                                        atmosphere is contagious.</h3>
-                                    <p>I’ve seen this company outperform expectations year after year while keeping a
+                                    <h3>Working at MediaX feels like being part of a family. The autonomy in decision-making, appreciation, invaluable exposure, and value for input, along with everything else, make it worth being a part of this company.</h3>
+                                    <!-- <p>I’ve seen this company outperform expectations year after year while keeping a
                                         genuine focus on the personal growth and happiness of each and every employee
-                                        under the MediaX umbrella.</p>
+                                        under the MediaX umbrella.</p> -->
 
-                                    <h5>- Sadaf Khan</h5>
-                                    <h6>(Sr. UI/UX Designer)</h6>
+                                    <h5>- Vanshika</h5>
+                                    <h6>(Founder’s Office)</h6>
                                 </div>
                             </div>
                         </div>
@@ -164,19 +157,18 @@
                     <div class="ouex-box">
                         <div class="row align-items-center">
                             <div class="col-md-5">
-                                <div class="muex-img"><img src="image/our-expert-1.jpg" alt="" class="w-100"></div>
+                                <div class="muex-img"><img src="image/team/ayushi.jpg" alt="" class="w-100"></div>
                             </div>
                             <div class="col-md-7">
                                 <div class="muex-text">
                                     <h1>“</h1>
-                                    <h3>This company is full of bright minds with even brighter personalities. The
-                                        atmosphere is contagious.</h3>
-                                    <p>I’ve seen this company outperform expectations year after year while keeping a
+                                    <h3>It has been so great working at MediaX with such hardworking, passionate people, always up for new learnings beyond their roles.</h3>
+                                    <!-- <p>I’ve seen this company outperform expectations year after year while keeping a
                                         genuine focus on the personal growth and happiness of each and every employee
-                                        under the MediaX umbrella.</p>
+                                        under the MediaX umbrella.</p> -->
 
-                                    <h5>- Sadaf Khan</h5>
-                                    <h6>(Sr. UI/UX Designer)</h6>
+                                    <h5>- Ayushi Di</h5>
+                                    <h6>(Account Manager)</h6>
                                 </div>
                             </div>
                         </div>
@@ -184,19 +176,20 @@
                     <div class="ouex-box">
                         <div class="row align-items-center">
                             <div class="col-md-5">
-                                <div class="muex-img"><img src="image/our-expert-1.jpg" alt="" class="w-100"></div>
+                                <div class="muex-img"><img src="image/team/jaishika.jpg" alt="" class="w-100"></div>
                             </div>
                             <div class="col-md-7">
                                 <div class="muex-text">
                                     <h1>“</h1>
-                                    <h3>This company is full of bright minds with even brighter personalities. The
-                                        atmosphere is contagious.</h3>
-                                    <p>I’ve seen this company outperform expectations year after year while keeping a
+                                    <h3>From brainstorming sessions that crackle with energy to daily check-ins where everyone's voice is valued, MediaX fosters an environment where ideas are constantly evolving and improving. 
+                                         <!-- No matter your role, you're encouraged to contribute, and senior team members are always happy to mentor and guide. -->
+                                        </h3>
+                                    <!-- <p>I’ve seen this company outperform expectations year after year while keeping a
                                         genuine focus on the personal growth and happiness of each and every employee
-                                        under the MediaX umbrella.</p>
+                                        under the MediaX umbrella.</p> -->
 
-                                    <h5>- Sadaf Khan</h5>
-                                    <h6>(Sr. UI/UX Designer)</h6>
+                                    <h5>- Jaishika</h5>
+                                    <h6>(HR)</h6>
                                 </div>
                             </div>
                         </div>
@@ -204,16 +197,16 @@
                     <div class="ouex-box">
                         <div class="row align-items-center">
                             <div class="col-md-5">
-                                <div class="muex-img"><img src="image/our-expert-1.jpg" alt="" class="w-100"></div>
+                                <div class="muex-img"><img src="image/team/sadaf.jpg" alt="" class="w-100"></div>
                             </div>
                             <div class="col-md-7">
                                 <div class="muex-text">
                                     <h1>“</h1>
-                                    <h3>This company is full of bright minds with even brighter personalities. The
-                                        atmosphere is contagious.</h3>
-                                    <p>I’ve seen this company outperform expectations year after year while keeping a
+                                    <h3>At MediaX, I get all the creative freedom I could ask for, resulting in remarkable outcomes. The team's support is unparalleled—always ready to help. And the vibe... It's like a second home.
+                                    </h3>
+                                    <!-- <p>I’ve seen this company outperform expectations year after year while keeping a
                                         genuine focus on the personal growth and happiness of each and every employee
-                                        under the MediaX umbrella.</p>
+                                        under the MediaX umbrella.</p> -->
 
                                     <h5>- Sadaf Khan</h5>
                                     <h6>(Sr. UI/UX Designer)</h6>
@@ -256,12 +249,12 @@
                 <div class="row">
                     <div class="col-12 mb-4"><h2 class="mb-r">Openings</h2></div>
                 </div>
-                <div class="opening-head ">
-                    <div class="row justify-content-between d-none d-md-block">
-                        <div class="col-3 ">
+                <div class="opening-head">
+                    <div class="row justify-content-between d-none d-md-flex">
+                        <div class="col-3">
                             <h5>Position</h5>
                         </div>
-                        <div class="col-3 ">
+                        <div class="col-3">
                             <h5>Location</h5>
                         </div>
                         <div class="col-3 d-none d-md-block">
