--- a/header.html
+++ b/header.html
@@ -54,5 +54,8 @@
     if(pageValue == "sub-service-page"){
         pageValue = 'service-page'
     }
+    if(pageValue == "case-study-pages"){
+        pageValue = 'project-page'
+    }
     $('[data-page="' + pageValue + '"]').addClass('active');
 </script>
