product page data uploaded

--- a/about-us.html
+++ b/about-us.html
@@ -376,29 +376,29 @@
         <section class="partner">
             <div class="container-xxl text-center">
                 <h2>Partnerships We’ve Built</h2>
-                <div class="row justify-content-center">
-                    <div class="col-6 col-md-3 col-xl-2">
+                <div class="row justify-content-around">
+                    <div class="col-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="par-img">
                             <img src="image/partners-logo/partner-1.png" alt="" class="w-100">
                         </div>
                     </div>
-                    <div class="col-6 col-md-3 col-xl-2">
+                    <div class="col-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="par-img">
                             <img src="image/partners-logo/partner-2.png" alt="" class="w-100">
                         </div>
                     </div>
-                    <div class="col-6 col-md-3 col-xl-2">
+                    <div class="col-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="par-img">
                             <img src="image/partners-logo/partner-3.png" alt="" class="w-100">
                         </div>
                     </div>
-                    <div class="d-none d-md-block"></div>
-                    <div class="col-6 col-md-3 col-xl-2">
+                    <!-- <div class="d-none d-md-block"></div> -->
+                    <div class="col-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="par-img">
                             <img src="image/partners-logo/partner-4.png" alt="" class="w-100">
                         </div>
                     </div>
-                    <div class="col-6 col-md-3 col-xl-2">
+                    <div class="col-6 col-md-4 col-lg-3 col-xl-2">
                         <div class="par-img">
                             <img src="image/partners-logo/partner-5.png" alt="" class="w-100">
                         </div>
