--- a/careers.html
+++ b/careers.html
@@ -148,7 +148,7 @@
                                         genuine focus on the personal growth and happiness of each and every employee
                                         under the MediaX umbrella.</p> -->
 
-                                    <h5>- Vanshika</h5>
+                                    <h5>- Vanshika Bhatia</h5>
                                     <h6>(Founder’s Office)</h6>
                                 </div>
                             </div>
@@ -167,7 +167,7 @@
                                         genuine focus on the personal growth and happiness of each and every employee
                                         under the MediaX umbrella.</p> -->
 
-                                    <h5>- Ayushi Di</h5>
+                                    <h5>- Ayushi Guwalani</h5>
                                     <h6>(Account Manager)</h6>
                                 </div>
                             </div>
