--- a/project.html
+++ b/project.html
@@ -42,7 +42,7 @@
     <!-- Main Section Start -->
     <main>
         <!-- Project Hero Section Start -->
-        <section class="project-hero">
+        <!-- <section class="project-hero">
             <video src="image/project-hero.mp4" autoplay muted loop></video>
             <div class="container-xxl h-100">
                 <div class="ph-box h-100">
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="ph-line"></div>
-        </section>
+        </section> -->
         <!-- Project Hero Section End -->
 
         <!-- Project Tab Section Start -->
@@ -251,7 +251,7 @@
 
                         </div>
                     </div>
-                    <div class="project-box">
+                    <!-- <div class="project-box">
                         <div class="row">
                             <div class="col-lg-7 pro-right">
                                 <div class="pro-b-img"><img src="image/project-2.png" alt="" class="w-100"></div>
@@ -279,8 +279,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="project-box">
+                    </div> -->
+                    <!-- <div class="project-box">
                         <div class="row">
                             <div class="col-lg-7 pro-right order-lg-1">
                                 <div class="pro-b-img"><img src="image/project-1.png" alt="" class="w-100"></div>
@@ -306,7 +306,7 @@
                             </div>
 
                         </div>
-                    </div>
+                    </div> -->
                     <div class="project-box">
                         <div class="row">
                             <div class="col-lg-7 pro-right">
@@ -334,7 +334,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-box">
+                    <!-- <div class="project-box">
                         <div class="row">
                             <div class="col-lg-7 pro-right order-lg-1">
                                 <div class="pro-b-img"><img src="image/project-1.png" alt="" class="w-100"></div>
@@ -362,7 +362,7 @@
                             </div>
 
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="pt-content d-none" data-pt-con="branding">
                 </div>
