--- a/service.html
+++ b/service.html
@@ -175,7 +175,7 @@
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
-                                    <img src="image/our-sol-5.jpg" alt="" class="w-100">
+                                    <img src="image/our-sol-5.png" alt="" class="w-100">
                                 </div>
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
