--- a/about-us.html
+++ b/about-us.html
@@ -142,7 +142,10 @@
                         </div>
                     </marquee>
                 </div> -->
-                <div class="abh-img"><img src="image/about-hero.jpg" alt="" class="w-100"></div>
+            </div>
+            <div class="abh-img">
+                <!-- <img src="image/about-hero.jpg" alt="" class="w-100"> -->
+                 <video src="image/Showreel.mp4" autoplay muted class="w-100"></video>
             </div>
         </section>
         <!-- About Hero Section End -->
