--- a/careers.html
+++ b/careers.html
@@ -48,7 +48,7 @@
             <div class="crh-text">
                 <div class="container-xxl">
                     <div class="row justify-content-center text-center">
-                        <div class="col-md-10">
+                        <div class="col-xl-10">
                             <h2>We're all about doing great work and having a blast doing it!</h2>
                             <p>Our team is dedicated to crafting innovative strategies that stand out and connect with
                                 people. Join us in shaping the future of marketing and making your mark with confidence.
